test(pu): study katago

--- a/cpp/configs/training/selfplay1.cfg
+++ b/cpp/configs/training/selfplay1.cfg
@@ -114,6 +114,8 @@ noResultStdev = 0.166666666
 
 maxVisits = 600
 numSearchThreads = 1
+# TODO(pu)
+numEigenThreadsPerModel = 1
 
 # GPU Settings-------------------------------------------------------------------------------
 
