--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -325,13 +325,17 @@ elseif(USE_BACKEND STREQUAL "OPENCL")
     else()
       message(WARNING "OpenCL not found, but found CUDA, attempting to use OpenCL via CUDA.")
     endif()
-    include_directories(${OpenCL_INCLUDE_DIRS})
+    # include_directories(${OpenCL_INCLUDE_DIRS})
+    include_directories(/usr/include)
     include_directories(SYSTEM ${CUDAToolkit_INCLUDE_DIRS})
     target_link_libraries(katago CUDA::OpenCL)
   else()
-    include_directories(${OpenCL_INCLUDE_DIRS})
-    link_directories(${OpenCL_LIBRARY})
-    target_link_libraries(katago ${OpenCL_LIBRARY})
+    # include_directories(${OpenCL_INCLUDE_DIRS})
+    include_directories(/usr/include)
+    # link_directories(${OpenCL_LIBRARY})
+    # target_link_libraries(katago ${OpenCL_LIBRARY})
+    link_directories(/usr/lib/x86_64-linux-gnu/libOpenCL.so)
+    target_link_libraries(katago /usr/lib/x86_64-linux-gnu/libOpenCL.so)
   endif()
 elseif(USE_BACKEND STREQUAL "EIGEN")
   target_compile_definitions(katago PRIVATE USE_EIGEN_BACKEND)
